src/terraform/modules/monitoring/ingestion/opentelemetry/templates/collector-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: opentelemetry
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  ports:
    - name: otel-metrics # Default endpoint for metrics.
      port: 8889
      protocol: TCP
      targetPort: 8889
  selector:
    app.kubernetes.io: otel-collector-collector
  type: ClusterIP
